--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "dockerfiles"]
 	path = dockerfiles
 	url = https://github.com/pelias/dockerfiles.git
+[submodule "mapzen.dockerfiles"]
+	path = mapzen.dockerfiles
+	url = https://github.com/pelias/dockerfiles.git
