--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,25 +67,14 @@ services:
     volumes:
       - "./pelias.json:/code/pelias.json"
       - "${DATA_DIR}:/data"
-#  Leave geonames out of the default build, uncomment if desired
-#  geonames:
-#    depends_on: [ "baseimage", "whosonfirst" ]
-#    image: pelias/geonames
-#    container_name: pelias_geonames
-#    networks: [ "pelias" ]
-#    volumes:
-#      - "./pelias.json:/code/pelias.json"
-#      - "${DATA_DIR}:/data"
-#  Use the pbf polyline extractor written by Peter for now because it's much faster
-#  valhalla:
-#    depends_on: [ "baseimage" ]
-#    image: pelias/valhalla
-#    container_name: pelias_valhalla
-#    build: imports/valhalla
-#    restart: always
-#    networks: [ "pelias" ]
-#    volumes:
-#      - "${DATA_DIR}:/data"
+  transit:
+    depends_on: [ "baseimage" ]
+    image: ott/pelias.transit.loader
+    container_name: pelias_openaddresses
+    networks: [ "pelias" ]
+    volumes:
+      - "./pelias.json:/code/pelias.json"
+      - "${DATA_DIR}:/data"
   polylines:
     depends_on: [ "baseimage" ]
     image: pelias/polylines
